# Lookout

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  lookout-build-prompt.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
scripts/: expand_indices.py  generate_indices.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar-news/: news_client.py  requirements.txt  sentiment_analyzer.py
src-tauri/sidecar-vision/: prompts.py  requirements.txt  schema.py  vision_client.py  yfinance_fetch.py
src-tauri/sidecar-web/: requirements.txt  web_search.py
src-tauri/src/: commands.rs  db.rs  error.rs  main.rs
src-tauri/src/autonomous/: alerts.rs  mod.rs  notifications.rs  scheduler.rs
src-tauri/src/capture/: mod.rs  region_config.rs  screenshot.rs  window_locator.rs
src-tauri/src/data_engine/: indicators.rs  mod.rs  types.rs
src-tauri/src/data_engine/providers/: alpaca_provider.rs  mod.rs  yfinance_provider.rs
src-tauri/src/orchestrator/: mod.rs  prompt_builder.rs  report_validator.rs
src-tauri/src/scanner/: engine.rs  indices.rs  mod.rs  scheduler.rs
src/components/: AutonomousMode.tsx  ChartView.tsx  HistoryView.tsx  OverlayPanel.tsx  ReportView.tsx  ScannerView.tsx  SetupWizard.tsx  Watchlist.tsx
src/lib/: tauri-bridge.ts
src/stores/: useReportStore.ts  useSettingsStore.ts  useWatchlistStore.ts
