[package]
name = "lookout"
version = "0.1.0"
edition = "2021"
description = "Webull Desktop companion — visual chart analysis, market data, and news sentiment"
authors = ["Lookout"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
dirs = "5"
dotenvy = "0.15"
png = "0.17"
time = "=0.3.36"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D11",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_Imaging",
    "Foundation",
    "Foundation_Metadata",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
